# project3_chromeyoutube

./: .gitignore  README.md  audiodownloader.javapv.txt  build.gradle.kts  gradlew.bat  mainactivity.javap.txt  mainactivity.javapv.txt  project3-sentences-164952.json  project3-sentences-172533.json  project3-sentences-173942.json  project3-sentences-174918.json  project3-sentences-175718.json  project3-sentences-180546.json  project3-sentences-181508.json  project3-sentences-182325.json  project3-sentences-183442.json  project3-sentences-184907.json  project3-sentences-185723.json  project3-sentences-192109.json  segment_420_480.webm  segment_check.opus  segments-ls.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/example/project3/: AudioSegmentDownloader.kt  ChromeAccessibilityService.kt  ChromeCaptureStore.kt  ChromeNotificationListenerService.kt  ChromePlaybackReader.kt  ClipboardCaptureActivity.kt  MainActivity.kt  OnDeviceWhisperModelStore.kt  OverlayService.kt  PlaybackAudioHelper.kt  PlaybackTarget.kt  SentenceAssembler.kt  SentenceTimestamp.kt  SentenceTimestampStore.kt  SentenceTranslationClient.kt  SttEngine.kt  WhisperApiClient.kt  WhisperJniBridge.kt  WhisperModels.kt  WhisperVerboseJsonParser.kt  YoutubeClipboardReader.kt  YoutubeDirectUrlExtractor.kt  (+1 more)
app/src/main/python/: yt_dlp_bridge.py
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
